--- a/sass/style.scss
+++ b/sass/style.scss
@@ -56,8 +56,7 @@ body {
   font-size: 4em;
   text-align: center;
   text-transform: uppercase;
-  color: #fff;
-  font-weight: 500;
+  font-weight: 100;
   letter-spacing: .5em;
 }
 
@@ -109,4 +108,30 @@ body {
     text-align: center;
     color: #fff;
   }
+}
+
+.stats-container {
+  top: 45%;
+  position: relative;
+  transform: translateY(-45%);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100px;
+}
+
+.timer {
+  margin: 0 25px 0 25px;
+  order: 1;
+  font-size: 3em;
+  font-weight: 100;
+}
+
+.score {
+  margin: 0 25px 0 25px;
+  order: 2;
+  font-size: 3em;
+  font-weight: 100;
 }
