--- a/sass/style.scss
+++ b/sass/style.scss
@@ -32,11 +32,11 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-image: linear-gradient(45deg, #aaaaff, rgba(255, 255, 255, 0));
-  background-image: -webkit-linear-gradient(45deg, #aaaaff,rgba(255,255,255,0));
-  background-image: -moz-linear-gradient(45deg, #aaaaff,rgba(255,255,255,0));
-  background-image: -o-linear-gradient(45deg, #aaaaff,rgba(255,255,255,0));
-  background-image: -ms-linear-gradient(45deg, #aaaaff,rgba(255,255,255,0));
+  background-image: linear-gradient(45deg, #440088, rgba(255, 255, 255, 0));
+  background-image: -webkit-linear-gradient(45deg, #440088,rgba(255,255,255,0));
+  background-image: -moz-linear-gradient(45deg, #440088,rgba(255,255,255,0));
+  background-image: -o-linear-gradient(45deg, #440088,rgba(255,255,255,0));
+  background-image: -ms-linear-gradient(45deg, #440088,rgba(255,255,255,0));
 }
 
 .container {
