--- a/css/style.css
+++ b/css/style.css
@@ -43,9 +43,9 @@ body {
   height: 100%; }
 
 .difficulties {
-  top: 45%;
+  top: 42%;
   position: relative;
-  transform: translateY(-45%);
+  transform: translateY(-42%);
   width: 100%;
   height: 250px;
   display: flex;
@@ -55,14 +55,30 @@ body {
 
 .welcome {
   position: relative;
-  top: 35%;
-  transform: translateY(-35%);
-  font-size: 4em;
-  text-align: center;
+  top: 37%;
+  transform: translateY(-37%);
   text-transform: uppercase;
-  font-weight: 100;
-  letter-spacing: .5em;
-  margin-left: .5em; }
+  width: 60%;
+  left: 19%;
+  height: 350px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap; }
+  .welcome .letter-box {
+    width: 10vw;
+    height: 10vw;
+    margin: 10px 10px;
+    background-color: rgba(255, 255, 255, 0.3); }
+    .welcome .letter-box .letter {
+      text-transform: uppercase;
+      transform: translateY(45%);
+      position: relative;
+      font-weight: 500;
+      font-size: 5vw;
+      text-align: center;
+      color: #fff; }
 
 .easy {
   background-image: url("../img/easy.png");
@@ -159,13 +175,19 @@ body {
   height: 100px; }
 
 .timer {
-  margin: 0 25px 0 25px;
-  order: 1;
+  margin: 0 50px;
   font-size: 3em;
-  font-weight: 100; }
+  font-weight: 100;
+  order: 1; }
 
 .score {
-  margin: 0 25px 0 25px;
-  order: 2;
+  margin: 0 50px;
   font-size: 3em;
-  font-weight: 100; }
+  font-weight: 100;
+  order: 3; }
+
+.wordsCompleted {
+  margin: 0 50px;
+  font-size: 3em;
+  font-weight: 100;
+  order: 2; }
