--- a/sass/style.scss
+++ b/sass/style.scss
@@ -20,6 +20,12 @@
   }
 }
 
+@mixin stats {
+  margin: 0 50px;
+  font-size: 3em;
+  font-weight: 100;
+}
+
 body {
   font-family: 'Myriad Set Pro';
   font-weight: 300;
@@ -45,9 +51,9 @@ body {
 }
 
 .difficulties {
-  top: 45%;
+  top: 42%;
   position: relative;
-  transform: translateY(-45%);
+  transform: translateY(-42%);
   width: 100%;
   height: 250px;
   display: flex;
@@ -58,14 +64,32 @@ body {
 
 .welcome {
   position: relative;
-  top: 35%;
-  transform: translateY(-35%);
-  font-size: 4em;
-  text-align: center;
+  top: 37%;
+  transform: translateY(-37%);
   text-transform: uppercase;
-  font-weight: 100;
-  letter-spacing: .5em;
-  margin-left: .5em;
+  width: 60%;
+  left: 19%;
+  height: 350px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  .letter-box {
+    width: 10vw;
+    height: 10vw;
+    margin: 10px 10px;
+    background-color: rgba(255,255,255,0.3);
+    .letter {
+      text-transform: uppercase;
+      transform: translateY(45%);
+      position: relative;
+      font-weight: 500;
+      font-size: 5vw;
+      text-align: center;
+      color: #fff;
+    }
+  }
 }
 
 .easy {
@@ -97,6 +121,7 @@ body {
   justify-content: center;
   align-items: center;
 }
+
 
 .letter-box {
   width: 145px;
@@ -136,15 +161,16 @@ body {
 }
 
 .timer {
-  margin: 0 25px 0 25px;
+  @include stats;
   order: 1;
-  font-size: 3em;
-  font-weight: 100;
 }
 
 .score {
-  margin: 0 25px 0 25px;
+  @include stats;
+  order: 3;
+}
+
+.wordsCompleted {
+  @include stats;
   order: 2;
-  font-size: 3em;
-  font-weight: 100;
 }
