--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,8 @@
 
 body {
   font-family: 'Myriad Set Pro';
-  font-weight: 300; }
+  font-weight: 300;
+  overflow: hidden; }
 
 .background {
   top: 0;
@@ -40,7 +41,8 @@ body {
 
 .container {
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  position: absolute; }
 
 .difficulties {
   top: 42%;
@@ -65,7 +67,8 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+  align-content: center; }
   .welcome .letter-box {
     width: 10vw;
     height: 10vw;
