--- a/sass/style.scss
+++ b/sass/style.scss
@@ -29,6 +29,7 @@
 body {
   font-family: 'Myriad Set Pro';
   font-weight: 300;
+  overflow: hidden;
 }
 
 
@@ -48,6 +49,7 @@ body {
 .container {
   width: 100%;
   height: 100%;
+  position: absolute;
 }
 
 .difficulties {
@@ -75,6 +77,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  align-content: center;
   .letter-box {
     width: 10vw;
     height: 10vw;
