--- a/sass/style.scss
+++ b/sass/style.scss
@@ -34,11 +34,11 @@ body {
 
 
 .background {
-  top: 0;
+  top: 2%;
   left: 0;
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 97%;
   background-image: linear-gradient(45deg, #440088, rgba(255, 255, 255, 0));
   background-image: -webkit-linear-gradient(45deg, #440088,rgba(255,255,255,0));
   background-image: -moz-linear-gradient(45deg, #440088,rgba(255,255,255,0));
@@ -79,8 +79,8 @@ body {
   flex-wrap: wrap;
   align-content: center;
   .letter-box {
-    width: 10vw;
-    height: 10vw;
+    width: 130px;
+    height: 130px;
     margin: 10px 10px;
     background-color: rgba(255,255,255,0.3);
     .letter {
@@ -88,7 +88,7 @@ body {
       transform: translateY(45%);
       position: relative;
       font-weight: 500;
-      font-size: 5vw;
+      font-size: 4em;
       text-align: center;
       color: #fff;
     }
