--- a/css/style.css
+++ b/css/style.css
@@ -28,11 +28,11 @@ body {
   overflow: hidden; }
 
 .background {
-  top: 2%;
+  top: 0;
   left: 0;
   position: absolute;
   width: 100%;
-  height: 97%;
+  height: 100%;
   background-image: linear-gradient(45deg, #440088, rgba(255, 255, 255, 0));
   background-image: -webkit-linear-gradient(45deg, #440088, rgba(255, 255, 255, 0));
   background-image: -moz-linear-gradient(45deg, #440088, rgba(255, 255, 255, 0));
@@ -40,6 +40,8 @@ body {
   background-image: -ms-linear-gradient(45deg, #440088, rgba(255, 255, 255, 0)); }
 
 .container {
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   position: absolute; }
