--- a/sass/style.scss
+++ b/sass/style.scss
@@ -34,11 +34,11 @@ body {
 
 
 .background {
-  top: 2%;
+  top: 0;
   left: 0;
   position: absolute;
   width: 100%;
-  height: 97%;
+  height: 100%;
   background-image: linear-gradient(45deg, #440088, rgba(255, 255, 255, 0));
   background-image: -webkit-linear-gradient(45deg, #440088,rgba(255,255,255,0));
   background-image: -moz-linear-gradient(45deg, #440088,rgba(255,255,255,0));
@@ -47,6 +47,8 @@ body {
 }
 
 .container {
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   position: absolute;
