--- a/css/style.css
+++ b/css/style.css
@@ -62,8 +62,8 @@ body {
   top: 40%;
   transform: translateY(-37%);
   text-transform: uppercase;
-  width: 35%;
-  left: 32%;
+  max-width: 40%;
+  margin: 0 auto;
   height: 175px;
   display: flex;
   flex-direction: row;
@@ -95,12 +95,11 @@ body {
   background-size: 70px;
   cursor: pointer;
   -webkit-filter: invert(0.95);
-  transition: all 0.3s ease; }
+  transition: all .3s ease; }
   .easy:hover {
     -webkit-filter: invert(1);
-    background-size: 77px;
-    width: 77px;
-    height: 77px; }
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1); }
 
 .medium {
   background-image: url("../img/medium.png");
@@ -112,12 +111,11 @@ body {
   background-size: 75px;
   cursor: pointer;
   -webkit-filter: invert(0.95);
-  transition: all 0.3s ease; }
+  transition: all .3s ease; }
   .medium:hover {
     -webkit-filter: invert(1);
-    background-size: 82.5px;
-    width: 82.5px;
-    height: 82.5px; }
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1); }
 
 .hard {
   background-repeat: no-repeat;
@@ -127,14 +125,21 @@ body {
   background-size: 85px;
   cursor: pointer;
   -webkit-filter: invert(0.95);
-  transition: all 0.3s ease;
+  transition: all .3s ease;
   background-image: url("../img/hard.png");
   order: 3; }
   .hard:hover {
     -webkit-filter: invert(1);
-    background-size: 93.5px;
-    width: 93.5px;
-    height: 93.5px; }
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1); }
+
+.playAgain {
+  top: 20%;
+  position: relative;
+  text-align: center;
+  font-size: 20px; }
+  .playAgain div {
+    cursor: pointer; }
 
 .wordShow {
   top: 45%;
@@ -163,7 +168,7 @@ body {
 
 .letter-box:not(.letter-move) {
   -webkit-filter: blur(0px);
-  transition: -webkit-filter 0.5s ease-in; }
+  transition: -webkit-filter .5s ease-in; }
 
 .selected {
   background-color: rgba(0, 255, 255, 0.3);
