--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,9 +14,8 @@
   transition: all .3s ease;
   &:hover {
     -webkit-filter: invert(1.0);
-    background-size: $size * 1.1;
-    width: $size * 1.1;
-    height: $size * 1.1;
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
   }
 }
 
@@ -70,8 +69,8 @@ body {
   top: 40%;
   transform: translateY(-37%);
   text-transform: uppercase;
-  width: 35%;
-  left: 32%;
+  max-width: 40%;
+  margin: 0 auto;
   height: 175px;
   display: flex;
   flex-direction: row;
@@ -112,6 +111,16 @@ body {
   @include difficulty(85px);
   background-image: url('../img/hard.png');
   order: 3;
+}
+
+.playAgain {
+  top: 20%;
+  position: relative;
+  text-align: center;
+  font-size: 20px;
+  div {
+    cursor: pointer;
+  }
 }
 
 .wordShow {
